Generate leaf nodes in spanner ingestion